2011-02-01  Joseph Myers  <joseph@codesourcery.com>

	* config/i386/cygming.opt (posix): New Driver option.

2011-02-01  Joseph Myers  <joseph@codesourcery.com>

	* config/arm/vxworks.opt: New.
	* config.gcc (arm-wrs-vxworks): Use arm/vxworks.opt.

2011-02-01  Joseph Myers  <joseph@codesourcery.com>

	* config/alpha/elf.opt: New.
	* config.gcc (alpha*-*-linux*, alpha*-*-gnu*, alpha*-*-freebsd*,
	alpha*-*-netbsd*, alpha*-*-openbsd*): Use alpha/elf.opt.

2011-02-01  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47559
	* tree-ssa-loop-im.c (can_sm_ref_p): Do not perform
	store-motion on references that can throw.

2011-02-01  Bernd Schmidt  <bernds@codesourcery.com>

	* tree-dump.c (dump_option_value_info): Add entry for TDF_CSELIB.
	* tree-pass.h (TDF_CSELIB): New macro.
	* cselib.c (new_cselib_val, expand_loc, cselib_expand_value_rtx_1,
	cselib_lookup): Check for it rather than for TDF_DETAILS.

2011-02-01  H.J. Lu  <hongjiu.lu@intel.com>

	PR driver/47547
	* lto-wrapper.c (run_gcc): Don't add -dumpdir if linker_output
	is HOST_BIT_BUCKET.

	* opts.c (finish_options): Don't add x_aux_base_name if it is
	HOST_BIT_BUCKET.

2011-02-01  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47555
	Revert
	2010-07-15  Sebastian Pop  <sebastian.pop@amd.com>

	* params.def (PARAM_SCEV_MAX_EXPR_SIZE): Bump the value to 100.

2011-02-01  Sebastien Bourdeauducq  <sebastien@milkymist.org>

	PR gcc/46692
	* config/lm32/t-lm32: Add multilib for all CPU options.

2011-02-01  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47541
	* tree-ssa-structalias.c (push_fields_onto_fieldstack): Make
	sure to have a field at offset zero.

2011-01-31  Joseph Myers  <joseph@codesourcery.com>

	* config/arc/arc.opt (EB, EL): New Driver options.

2011-01-31  Joseph Myers  <joseph@codesourcery.com>

	* config/alpha/osf5.opt: New.
	* config.gcc (alpha*-dec-osf5.1*): Use alpha/osf5.opt.

2011-01-31  Joseph Myers  <joseph@codesourcery.com>
